# vybmedia

./: .env.example  .gitignore  README.md  callback.html  index.html  package.json  privacy-policy.html  terms-of-service.html  tiktok9A7M5EetqYtSGb9l2QLDXnrvcOHN29Te  tiktokAwSR7MyRN2rc1ACJ792Bp9Ilt3MHxZdb.txt  tsconfig.base.json
apps/api/: package.json  tsconfig.json
apps/api/src/: health.controller.ts  main.ts
apps/api/src/config/: env.ts
apps/audio-worker/: README.md  pyproject.toml
apps/audio-worker/app/: analyzer.py  main.py  models.py
apps/web/: next.config.ts  package.json  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/feed/: page.tsx
apps/web/src/app/mix/: page.tsx
apps/web/src/app/mix/[id]/: page.tsx
apps/web/src/app/notifications/: page.tsx
apps/web/src/app/onboarding/: page.tsx
apps/web/src/app/profile/[username]/: page.tsx
apps/web/src/app/search/: page.tsx
apps/web/src/app/settings/: page.tsx
apps/web/src/app/sign-in/[[...sign-in]]/: page.tsx
apps/web/src/app/sign-up/[[...sign-up]]/: page.tsx
apps/web/src/app/track/[id]/: page.tsx
apps/web/src/app/upload/: page.tsx
apps/web/src/app/upload/snippet/: page.tsx
apps/web/src/components/: app-shell.tsx  bottom-player.tsx
docs/: ARCHITECTURE.md  CORE_USER_FLOWS.md  DATA_MODEL.md  SCREEN_MAP.md  VYB_CODEX_HANDOFF.md  VYB_PROJECT.md
supabase/migrations/: 0001_initial_schema.sql
