[project]
name = "vyb-audio-worker"
version = "0.1.0"
description = "Audio analysis worker for VYB uploads"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.6",
  "librosa>=0.10.2.post1",
  "numpy>=2.2.1",
  "pydantic>=2.10.4",
  "uvicorn[standard]>=0.34.0"
]

[tool.ruff]
line-length = 100
